tests/lean/scan_test2.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
a
scan_test2.lean:7:0: error: Command expected
