tests/lean/scan_test2.lean
(*
   a = 1 *
2
   print("a")
*)

prnt "fail"